--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -34,8 +34,11 @@ jobs:
       packages: write
 
     steps:
-      - name: Checkout code
+      - name: Checkout code with submodules
         uses: actions/checkout@v3
+        with:
+          submodules: recursive
+          fetch-depth: 0
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -60,6 +63,13 @@ jobs:
         run: |
           echo "IMAGE_TAG=${{ github.event.inputs.tag }}" >> $GITHUB_ENV
           echo "DEPLOY_ENV=${{ github.event.inputs.environment }}" >> $GITHUB_ENV
+
+      # Copy Mattermost source to docker directory for build context
+      - name: Prepare build context
+        run: |
+          mkdir -p docker/mattermost
+          cp -r mattermost/* docker/mattermost/
+          ls -la docker/mattermost/
 
       - name: Build and push Consilio image
         uses: docker/build-push-action@v4
