--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -64,12 +64,12 @@ jobs:
           echo "IMAGE_TAG=${{ github.event.inputs.tag }}" >> $GITHUB_ENV
           echo "DEPLOY_ENV=${{ github.event.inputs.environment }}" >> $GITHUB_ENV
 
-      # Copy Mattermost source to docker directory for build context
+      # Copy Mattermost webapp source to docker directory for build context
       - name: Prepare build context
         run: |
-          mkdir -p docker/mattermost
-          cp -r mattermost/* docker/mattermost/
-          ls -la docker/mattermost/
+          mkdir -p docker/mattermost/webapp
+          cp -r mattermost/webapp/* docker/mattermost/webapp/
+          ls -la docker/mattermost/webapp/
 
       - name: Build and push Consilio image
         uses: docker/build-push-action@v4
