--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -34,11 +34,8 @@ jobs:
       packages: write
 
     steps:
-      - name: Checkout code with submodules
+      - name: Checkout code
         uses: actions/checkout@v3
-        with:
-          submodules: recursive
-          fetch-depth: 0
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -64,12 +61,11 @@ jobs:
           echo "IMAGE_TAG=${{ github.event.inputs.tag }}" >> $GITHUB_ENV
           echo "DEPLOY_ENV=${{ github.event.inputs.environment }}" >> $GITHUB_ENV
 
-      # Copy Mattermost webapp source to docker directory for build context
-      - name: Prepare build context
+      # Prepare customization files
+      - name: Prepare customization files
         run: |
-          mkdir -p docker/mattermost/webapp
-          cp -r mattermost/webapp/* docker/mattermost/webapp/
-          ls -la docker/mattermost/webapp/
+          mkdir -p docker/customizations/components/global_header/left_controls/product_menu/product_branding_team_edition/
+          cp -r webapp-src/components/global_header/left_controls/product_menu/product_branding_team_edition/* docker/customizations/components/global_header/left_controls/product_menu/product_branding_team_edition/
 
       - name: Build and push Consilio image
         uses: docker/build-push-action@v4
