Simplify customization using CSS approach

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,24 +1,23 @@
 FROM mattermost/mattermost-team-edition:latest
 
-# Create necessary directories
+# Switch to root for modifications
 USER root
-RUN mkdir -p /mm/customizations
-WORKDIR /mm/customizations
-
-# Copy our customization files
-COPY ./customizations/ /mm/customizations/
 
 # Copy our custom config
 COPY ./config/config.json /mm/config/config.json
-RUN chown mattermost:mattermost /mm/config/config.json
 
-# Apply customizations
-RUN cp -f /mm/customizations/components/global_header/left_controls/product_menu/product_branding_team_edition/product_branding_team_edition.tsx /mm/client/components/global_header/left_controls/product_menu/product_branding_team_edition/product_branding_team_edition.tsx
+# Copy custom CSS file
+COPY ./custom.css /mm/client/
+
+# Set proper permissions
+RUN chown mattermost:mattermost /mm/config/config.json /mm/client/custom.css
 
 # Set environment variables
 ENV MM_SQLSETTINGS_DRIVERNAME=postgres
 ENV MM_SQLSETTINGS_DATASOURCE=postgres://mmuser:mmuser_password@consilio-postgres:5432/mattermost?sslmode=disable
 ENV MM_LOGSETTINGS_CONSOLELEVEL=DEBUG
+ENV MM_CUSTOMSETTINGS_ENABLECUSTOMBRANDING=true
+ENV MM_CUSTOMSETTINGS_CUSTOMCSSURL=/custom.css
 
 # Switch back to mattermost user
 USER mattermost
