--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     image: mattermost/mattermost-team-edition:latest
     container_name: co-mattermost-1
     ports:
-      - "8066:8065"
+      - "8067:8065"
     environment:
       MM_SQLSETTINGS_DRIVERNAME: postgres
       MM_SQLSETTINGS_DATASOURCE: postgres://mmuser:mmuser_password@co-postgres:5432/mattermost_dev?sslmode=disable
@@ -33,6 +33,10 @@ services:
       MM_EMAILSETTINGS_REPLYTOADDRESS: noreply@example.com
       MM_EMAILSETTINGS_SENDEMAILNOTIFICATIONS: "true"
       MM_LOGSETTINGS_CONSOLELEVEL: DEBUG
+      MM_CUSTOMSETTINGS_ENABLECUSTOMBRANDING: "true"
+      MM_CUSTOMSETTINGS_CUSTOMCSSURL: "/custom.css"
+    volumes:
+      - ./custom.css:/mm/client/custom.css
     depends_on:
       - co-postgres
     restart: unless-stopped
